--- a/package.json
+++ b/package.json
@@ -6,10 +6,20 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "mdb-react-ui-kit": "^2.3.0",
     "react": "^17.0.2",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-intl": "^5.24.6",
+    "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-switch": "^6.0.0",
+    "sass": "^1.49.8",
+    "sass-loader": "^12.6.0",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
